admin screen fixes || scrollbars

--- a/app/src/pages/admin/styles/IceProvisionForm.scss
+++ b/app/src/pages/admin/styles/IceProvisionForm.scss
@@ -160,3 +160,20 @@
     width:auto;
     margin-right:10px;
 }
+
+// token scrollbar css
+
+#iceToken{
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #929397;
+        border: 1px solid transparent;
+        border-left-color: #e6e7e9;
+        border-right-color: #e6e7e9;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px; 
+    }
+}
