--- a/app/src/pages/admin/styles/TokenMgmtForm.scss
+++ b/app/src/pages/admin/styles/TokenMgmtForm.scss
@@ -170,6 +170,7 @@
     margin-top: -2px;
     height: 26px;
     width: 100%;
+    outline: none;
 }
 .datePicContainer input, .timePicContainer input{margin-top: 2px; height: 27px;}
 
@@ -237,10 +238,15 @@
 }
 .rdtPicker td, .rdtPicker th {
     font-size: 14px !important;
+    text-align: center;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: none;
 }
 .rdtPicker {
     box-shadow: 0 6px 12px rgba(0,0,0,.175) !important;
-    min-width: 185px !important;
+    min-width: 200px !important;
 }
 .ice-type-tkn-mgmt{
     margin-bottom:2%;
@@ -258,4 +264,52 @@
 .action-form-mgmt{
     width:auto;
     margin-right:10px;
+}
+.rdtPicker td.rdtActive, .rdtPicker td.rdtActive:hover {
+    background-color: #04c !important;
+}
+.rdtPicker td.rdtDisabled, .rdtPicker td.rdtDisabled:hover {
+    background: none;
+    color: #999999;
+    cursor: pointer !important;
+}
+ .rdtPicker td.rdtToday :hover {
+    color: #000;
+}
+ .rdtPicker td.rdtToday .active,  .rdtPicker td.rdtToday .disabled,  .rdtPicker td.rdtToday .disabled.active,  .rdtPicker td.rdtToday .disabled.disabled,  .rdtPicker td.rdtToday .disabled:active,  .rdtPicker td.rdtToday .disabled:hover,  .rdtPicker td.rdtToday .disabled:hover.active,  .rdtPicker td.rdtToday .disabled:hover.disabled,  .rdtPicker td.rdtToday .disabled:hover:active,  .rdtPicker td.rdtToday .disabled:hover:hover,  .rdtPicker td.rdtToday .disabled:hover[disabled],  .rdtPicker td.rdtToday .disabled[disabled],  .rdtPicker td.rdtToday :active,  .rdtPicker td.rdtToday :hover,  .rdtPicker td.rdtToday :hover.active,  .rdtPicker td.rdtToday :hover.disabled,  .rdtPicker td.rdtToday :hover:active,  .rdtPicker td.rdtToday :hover:hover,  .rdtPicker td.rdtToday :hover[disabled],  .rdtPicker td.rdtToday [disabled] {
+    background-color: #fdf59a;
+}
+ .rdtPicker td.rdtToday ,  .rdtPicker td.rdtToday .disabled,  .rdtPicker td.rdtToday:hover,  .rdtPicker td.rdtToday .disabled:hover,  .rdtPicker td.rdtToday :hover {
+    background-color: #fde19a;
+    background-image: -moz-linear-gradient(to bottom,#fdd49a,#fdf59a);
+    background-image: -ms-linear-gradient(to bottom,#fdd49a,#fdf59a);
+    background-image: -webkit-gradient(linear,0 0,0 100%,from(#fdd49a),to(#fdf59a));
+    background-image: -webkit-linear-gradient(to bottom,#fdd49a,#fdf59a);
+    background-image: -o-linear-gradient(to bottom,#fdd49a,#fdf59a);
+    background-image: linear-gradient(to bottom,#fdd49a,#fdf59a);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdd49a', endColorstr='#fdf59a', GradientType=0);
+    border-color: #fdf59a #fdf59a #fbed50;
+    border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+    color: #000;
+}
+
+
+
+// Token scrollbar css
+
+#ciToken{
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #929397;
+        border: 1px solid transparent;
+        border-left-color: #e6e7e9;
+        border-right-color: #e6e7e9;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px; 
+    }
 }
